--- a/include/colemator/mouse.dtsi
+++ b/include/colemator/mouse.dtsi
@@ -1,8 +1,21 @@
-#define ZMK_MOUSE_DEFAULT_MOVE_VAL 800  // 600
-#define ZMK_MOUSE_DEFAULT_SCRL_VAL 20   // 10
+#define ZMK_POINTING_DEFAULT_MOVE_VAL 800  // 600
+#define ZMK_POINTING_DEFAULT_SCRL_VAL 20   // 10
 
-#include <dt-bindings/zmk/mouse.h>
-#include <behaviors/mouse_keys.dtsi>
+#include <dt-bindings/zmk/pointing.h>
+#include <input/processors.dtsi>
+#include <zephyr/dt-bindings/input/input-event-codes.h>
+
+/ {
+    input_processors {
+        zip_wheel_scaler: zip_wheel_scaler {
+            compatible = "zmk,input-processor-scaler";
+            #input-processor-cells = <2>;
+            type = <INPUT_EV_REL>;
+            codes = <INPUT_REL_WHEEL>;
+            track-remainders;
+        };
+    };
+};
 
 &mmv {
     acceleration-exponent = <1>;  // 1
@@ -10,35 +23,30 @@
     delay-ms = <0>;
     trigger-period-ms = <8>;      // 16
 };
+&mmv_input_listener {
+    slow {
+        layers = <14>;
+        input-processors = <&zip_xy_scaler 1 3>;
+    };
+    fast {
+        layers = <13>;
+        input-processors = <&zip_xy_scaler 2 1>;
+    };
+};
+
 &msc {
     acceleration-exponent = <1>;  // 0
     time-to-max-speed-ms = <40>;  // 300
     delay-ms = <0>;
     trigger-period-ms = <8>;      // 16
 };
-
-#define ZMK_MOUSE_FAST_MOVE_VAL 1600
-#define ZMK_MOUSE_FAST_SCRL_VAL 40
-#define ZMK_MOUSE_SLOW_MOVE_VAL 400
-#define ZMK_MOUSE_SLOW_SCRL_VAL 10
-
-#define MV_FUP MOVE_Y(-ZMK_MOUSE_FAST_MOVE_VAL)
-#define MV_FDOWN MOVE_Y(ZMK_MOUSE_FAST_MOVE_VAL)
-#define MV_FLEFT MOVE_X(-ZMK_MOUSE_FAST_MOVE_VAL)
-#define MV_FRIGHT MOVE_X(ZMK_MOUSE_FAST_MOVE_VAL)
-
-#define SC_FUP MOVE_Y(ZMK_MOUSE_FAST_SCRL_VAL)
-#define SC_FDOWN MOVE_Y(-ZMK_MOUSE_FAST_SCRL_VAL)
-#define SC_FLEFT MOVE_X(-ZMK_MOUSE_FAST_SCRL_VAL)
-#define SC_FRIGHT MOVE_X(ZMK_MOUSE_FAST_SCRL_VAL)
-
-#define MV_SUP MOVE_Y(-ZMK_MOUSE_SLOW_MOVE_VAL)
-#define MV_SDOWN MOVE_Y(ZMK_MOUSE_SLOW_MOVE_VAL)
-#define MV_SLEFT MOVE_X(-ZMK_MOUSE_SLOW_MOVE_VAL)
-#define MV_SRIGHT MOVE_X(ZMK_MOUSE_SLOW_MOVE_VAL)
-
-#define SC_SUP MOVE_Y(ZMK_MOUSE_SLOW_SCRL_VAL)
-#define SC_SDOWN MOVE_Y(-ZMK_MOUSE_SLOW_SCRL_VAL)
-#define SC_SLEFT MOVE_X(-ZMK_MOUSE_SLOW_SCRL_VAL)
-#define SC_SRIGHT MOVE_X(ZMK_MOUSE_SLOW_SCRL_VAL)
-
+&msc_input_listener {
+    slow {
+        layers = <14>;
+        input-processors = <&zip_wheel_scaler 1 3>;
+    };
+    fast {
+        layers = <13>;
+        input-processors = <&zip_wheel_scaler 2 1>;
+    };
+};
