Add horizontal wheel to zip_wheel_scaler

--- a/include/colemator/mouse.dtsi
+++ b/include/colemator/mouse.dtsi
@@ -11,7 +11,7 @@
             compatible = "zmk,input-processor-scaler";
             #input-processor-cells = <2>;
             type = <INPUT_EV_REL>;
-            codes = <INPUT_REL_WHEEL>;
+            codes = <INPUT_REL_WHEEL INPUT_REL_HWHEEL>;
             track-remainders;
         };
     };
