--- a/include/colemator/mouse.dtsi
+++ b/include/colemator/mouse.dtsi
@@ -25,11 +25,11 @@
 };
 &mmv_input_listener {
     slow {
-        layers = <14>;
+        layers = <SMO>;
         input-processors = <&zip_xy_scaler 1 3>;
     };
     fast {
-        layers = <13>;
+        layers = <FMO>;
         input-processors = <&zip_xy_scaler 2 1>;
     };
 };
@@ -42,11 +42,11 @@
 };
 &msc_input_listener {
     slow {
-        layers = <14>;
+        layers = <SMO>;
         input-processors = <&zip_wheel_scaler 1 3>;
     };
     fast {
-        layers = <13>;
+        layers = <FMO>;
         input-processors = <&zip_wheel_scaler 2 1>;
     };
 };
